# wayland-accessibility-notes

./: LICENSE  README.md  communities.md  dbus.md  other-articles.md  talon-requirements.md  wayland-compositors.md  xdg-desktop-portal.md
capability-tests/: README.md  TODO  pyproject.toml
capability-tests/wayland_capability_tests/: app.py  wayland_client.py
